{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 80,
  "lineage": "1cdccdae-46bb-c39d-cf00-b40db3d6ad63",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:internet-gateway/igw-06508981fefba086f",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0d14f6586e6b10314"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eksctl-DFX-EKS-CLUSTER-cluster/InternetGateway"
                ]
              }
            ],
            "id": "igw-06508981fefba086f",
            "internet_gateway_id": "igw-06508981fefba086f",
            "owner_id": "951208753434",
            "tags": {
              "Name": "eksctl-DFX-EKS-CLUSTER-cluster/InternetGateway",
              "Project": "Openbanking-fdx-dev",
              "alpha.eksctl.io/cluster-name": "DFX-EKS-CLUSTER",
              "alpha.eksctl.io/eksctl-version": "0.79.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "DFX-EKS-CLUSTER"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_sub_devops1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:subnet/subnet-066bdf321c7bf0bd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 8138,
            "cidr_block": "192.168.96.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPrivateEUWEST1A"
                ]
              }
            ],
            "id": "subnet-066bdf321c7bf0bd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951208753434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPrivateEUWEST1A",
              "Project": "Openbanking-fdx-dev",
              "alpha.eksctl.io/cluster-name": "DFX-EKS-CLUSTER",
              "alpha.eksctl.io/eksctl-version": "0.79.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "DFX-EKS-CLUSTER",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d14f6586e6b10314"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_sub_devops1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:subnet/subnet-0e02ee43e97ae13d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 8109,
            "cidr_block": "192.168.160.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPrivateEUWEST1B"
                ]
              }
            ],
            "id": "subnet-0e02ee43e97ae13d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951208753434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPrivateEUWEST1B",
              "Project": "Openbanking-fdx-dev",
              "alpha.eksctl.io/cluster-name": "DFX-EKS-CLUSTER",
              "alpha.eksctl.io/eksctl-version": "0.79.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "DFX-EKS-CLUSTER",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d14f6586e6b10314"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_sub_devops1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:subnet/subnet-039c47e575bbded2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 8036,
            "cidr_block": "192.168.128.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPrivateEUWEST1C"
                ]
              }
            ],
            "id": "subnet-039c47e575bbded2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951208753434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPrivateEUWEST1C",
              "Project": "Openbanking-fdx-dev",
              "alpha.eksctl.io/cluster-name": "DFX-EKS-CLUSTER",
              "alpha.eksctl.io/eksctl-version": "0.79.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "DFX-EKS-CLUSTER",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d14f6586e6b10314"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_sub_devops1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:subnet/subnet-088da042945e7c206",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 8093,
            "cidr_block": "192.168.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPublicEUWEST1A"
                ]
              }
            ],
            "id": "subnet-088da042945e7c206",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "951208753434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPublicEUWEST1A",
              "Project": "Openbanking-fdx-dev",
              "alpha.eksctl.io/cluster-name": "DFX-EKS-CLUSTER",
              "alpha.eksctl.io/eksctl-version": "0.79.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "DFX-EKS-CLUSTER",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d14f6586e6b10314"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_sub_devops1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:subnet/subnet-0b1d12070e33bca7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 8094,
            "cidr_block": "192.168.64.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPublicEUWEST1B"
                ]
              }
            ],
            "id": "subnet-0b1d12070e33bca7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "951208753434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPublicEUWEST1B",
              "Project": "Openbanking-fdx-dev",
              "alpha.eksctl.io/cluster-name": "DFX-EKS-CLUSTER",
              "alpha.eksctl.io/eksctl-version": "0.79.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "DFX-EKS-CLUSTER",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d14f6586e6b10314"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_sub_devops1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:subnet/subnet-0ab0d08ad90e96153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 8185,
            "cidr_block": "192.168.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPublicEUWEST1C"
                ]
              }
            ],
            "id": "subnet-0ab0d08ad90e96153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "951208753434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "eksctl-DFX-EKS-CLUSTER-cluster/SubnetPublicEUWEST1C",
              "Project": "Openbanking-fdx-dev",
              "alpha.eksctl.io/cluster-name": "DFX-EKS-CLUSTER",
              "alpha.eksctl.io/eksctl-version": "0.79.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "DFX-EKS-CLUSTER",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d14f6586e6b10314"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:vpc/vpc-0d14f6586e6b10314",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00c5fce567d0e0c31",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-9dc1d0fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eksctl-DFX-EKS-CLUSTER-cluster/VPC"
                ]
              }
            ],
            "id": "vpc-0d14f6586e6b10314",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b28dae5adbe6745",
            "owner_id": "951208753434",
            "tags": {
              "Name": "eksctl-DFX-EKS-CLUSTER-cluster/VPC",
              "Project": "Openbanking-fdx-dev",
              "alpha.eksctl.io/cluster-name": "DFX-EKS-CLUSTER",
              "alpha.eksctl.io/eksctl-version": "0.79.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "DFX-EKS-CLUSTER"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "axway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005450fd6ad72dec5",
            "association_id": "eipassoc-041f0b31dfdb23a5c",
            "domain": "vpc",
            "id": "eipalloc-005450fd6ad72dec5",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-02f62231a3bdf50f9",
            "private_dns": "ip-192-168-101-177.eu-west-1.compute.internal",
            "private_ip": "192.168.101.177",
            "public_dns": "ec2-176-34-213-0.eu-west-1.compute.amazonaws.com",
            "public_ip": "176.34.213.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "axway-eip"
            },
            "tags_all": {
              "Name": "axway-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "axway-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a76dbe62e83d9108",
            "arn": "arn:aws:ec2:eu-west-1:951208753434:instance/i-02d94db7ad1fe4a53",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d94db7ad1fe4a53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "axway_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5ac8ca6d830da20",
            "private_dns": "ip-192-168-3-123.eu-west-1.compute.internal",
            "private_ip": "192.168.3.123",
            "public_dns": "ec2-34-244-136-241.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.136.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 750,
                "tags": {
                  "Project": "Openbanking-fdx-dev"
                },
                "throughput": 0,
                "volume_id": "vol-0d13307bb1299ae2d",
                "volume_size": 250,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08accdf076f4b603e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088da042945e7c206",
            "tags": {
              "Name": "axway-cluster-BASTION",
              "Project": "Openbanking-fdx-dev"
            },
            "tags_all": {
              "Name": "axway-cluster-BASTION",
              "Project": "Openbanking-fdx-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08accdf076f4b603e"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "data.aws_subnet.public_sub_devops1a"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_cassandra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a76dbe62e83d9108",
            "arn": "arn:aws:ec2:eu-west-1:951208753434:instance/i-056fce310c35bd0a5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056fce310c35bd0a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.xlarge",
            "ipv6_address_count": 0,
            "key_name": "axway_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf184a73a5e8093b",
            "private_dns": "ip-192-168-98-128.eu-west-1.compute.internal",
            "private_ip": "192.168.98.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 750,
                "tags": {
                  "Project": "Openbanking-fdx-dev"
                },
                "throughput": 0,
                "volume_id": "vol-048a5728a698f9981",
                "volume_size": 250,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08accdf076f4b603e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066bdf321c7bf0bd8",
            "tags": {
              "Name": "axway-EC2-cassandra",
              "Project": "Openbanking-fdx-dev"
            },
            "tags_all": {
              "Name": "axway-EC2-cassandra",
              "Project": "Openbanking-fdx-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08accdf076f4b603e"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "data.aws_subnet.private_sub_devops1a"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "axway-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005450fd6ad72dec5",
            "connectivity_type": "public",
            "id": "nat-0ddca80943a5d0b6a",
            "network_interface_id": "eni-02f62231a3bdf50f9",
            "private_ip": "192.168.101.177",
            "public_ip": "176.34.213.0",
            "subnet_id": "subnet-066bdf321c7bf0bd8",
            "tags": {
              "Name": "axway-nat"
            },
            "tags_all": {
              "Name": "axway-nat"
            }
          },
          "dependencies": [
            "aws_eip.axway-eip",
            "data.aws_internet_gateway.igw",
            "data.aws_subnet.private_sub_devops1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:route-table/rtb-05a49a17088d37359",
            "id": "rtb-05a49a17088d37359",
            "owner_id": "951208753434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ddca80943a5d0b6a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d14f6586e6b10314"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.axway-eip",
            "aws_nat_gateway.axway-nat",
            "data.aws_internet_gateway.igw",
            "data.aws_subnet.private_sub_devops1a",
            "data.aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:route-table/rtb-07d9a0b0698fa8fa1",
            "id": "rtb-07d9a0b0698fa8fa1",
            "owner_id": "951208753434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06508981fefba086f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d14f6586e6b10314"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.igw",
            "data.aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:951208753434:security-group/sg-08accdf076f4b603e",
            "description": "Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08accdf076f4b603e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "axway-cluster-sg-prod",
            "name_prefix": "",
            "owner_id": "951208753434",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security Group"
            },
            "tags_all": {
              "Name": "SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d14f6586e6b10314"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc_devops"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}